Spacing fix
Adds right margin to Tools element.

--- a/docroot/sites/all/themes/custom/boston_hub/src/sass/components/hub-header/_hub-header.scss
+++ b/docroot/sites/all/themes/custom/boston_hub/src/sass/components/hub-header/_hub-header.scss
@@ -98,6 +98,10 @@
     display: none;
   }
 
+  li[class^="menu-"].last {
+    margin-right: 1.4em;
+  }
+
 }
 
 .not-logged-in .header-right {
